--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,16 +1,23 @@
 @font-face {
-  font-family: "SKLorenzo-Regular";
+  font-family: "Arvo-Regular";
   font-style: "normal";
   font-weight: 500;
-  src: url("/public/fonts/SKLorenzo-Regular.ttf") format("truetype");
+  src: url("/fonts/Arvo-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Arvo-Bold";
+  font-style: "normal";
+  font-weight: 700;
+  src: url("/fonts/Arvo-Bold.ttf") format("truetype");
 }
 
 h1 {
-  font-family: "SKLorenzo-Regular";
+  font-family: "Arvo-Regular";
 }
 
 h3 {
-  font-family: "SKLorenzo-Regular";
+  font-family: "Arvo-Regular";
   font-size: 36px;
   line-height: 54px;
   font-weight: 500;
