--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,10 @@
       border-bottom: 4px solid #d3d3d3;
       margin: 40px 40px 0;
       padding-bottom: 40px;
+
+      &:last-child {
+        border: none;
+      }
     }
   }
 
