--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,11 @@
+@import 'bootstrap/scss/functions';
+@import 'bootstrap/scss/variables';
+@import 'bootstrap/scss/mixins';
+
 @import './fonts.scss';
+@import './breakpoints.scss';
 @import './main.scss';
+@import './print-container.scss';
 
 body {
   font-family: 'Arvo-Regular';
